--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "private": true,
   "dependencies": {
     "@grammyjs/auto-chat-action": "0.1.1",
+    "@grammyjs/conversations": "1.1.1",
     "@grammyjs/hydrate": "1.3.1",
     "@grammyjs/i18n": "1.0.1",
     "@grammyjs/parse-mode": "1.7.1",
