--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@grammyjs/storage-redis": "2.2.0",
     "@grammyjs/types": "3.1.1",
     "@prisma/client": "4.14.0",
+    "bullmq": "^3.13.4",
     "callback-data": "1.0.2",
     "dotenv": "16.0.3",
     "fastify": "4.17.0",
