--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@bull-board/api": "^5.2.0",
+    "@bull-board/fastify": "^5.2.0",
     "@grammyjs/auto-chat-action": "0.1.1",
     "@grammyjs/conversations": "1.1.1",
     "@grammyjs/hydrate": "1.3.1",
@@ -25,8 +27,8 @@
     "@grammyjs/storage-redis": "2.2.0",
     "@grammyjs/types": "3.0.3",
     "@prisma/client": "4.12.0",
+    "bullmq": "2.4.0",
     "callback-data": "1.0.2",
-    "bullmq": "^3.13.4",
     "dotenv": "16.0.3",
     "fastify": "4.15.0",
     "grammy": "1.15.3",
