--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "telegram-bot-template",
   "version": "0.1.0",
   "description": "Telegram bot starter template",
-  "main": "dist/main.js",
+
   "type": "module",
   "scripts": {
-    "lint": "eslint \"src/**/*.ts\"",
-    "format": "eslint \"src/**/*.ts\" --fix",
+    "lint": "eslint .",
+    "format": "eslint . --fix",
     "typecheck": "tsc",
-    "dev": "tsc-watch --onSuccess \"tsx ./src/main.ts\"",
-    "start": "tsc && tsx ./src/main.ts",
-    "start:force": "tsx ./src/main.ts",
+    "dev": "tsc-watch --onSuccess \"tsx ./scripts/start.ts\"",
+    "start": "tsc && tsx ./scripts/start.ts",
+    "start:force": "tsx ./scripts/start.ts",
     "prepare": "npx husky install"
   },
   "author": "deptyped <deptyped@gmail.com>",
@@ -21,51 +21,53 @@
     "@bull-board/fastify": "^5.2.0",
     "@grammyjs/auto-chat-action": "0.1.1",
     "@grammyjs/conversations": "1.1.1",
-    "@grammyjs/hydrate": "1.3.1",
+    "@grammyjs/hydrate": "1.4.1",
     "@grammyjs/i18n": "1.0.1",
-    "@grammyjs/parse-mode": "1.6.0",
+    "@grammyjs/parse-mode": "1.9.0",
     "@grammyjs/storage-redis": "2.2.0",
-    "@grammyjs/types": "3.0.3",
-    "@prisma/client": "4.12.0",
+    "@grammyjs/types": "3.4.6",
+    "@prisma/client": "5.9.1",
     "bullmq": "3.14.1",
-    "callback-data": "1.0.2",
-    "dotenv": "16.0.3",
+    "callback-data": "1.1.1",
+    "dotenv": "16.4.1",
     "enhanced-ms": "^2.3.0",
-    "fastify": "4.15.0",
-    "grammy": "1.15.3",
+    "fastify": "4.26.0",
+    "grammy": "1.20.3",
     "grammy-guard": "0.5.0",
     "grammy-inline-menu": "^8.0.0",
     "grammy-middlewares": "^1.0.11",
     "ioredis": "5.3.2",
-    "iso-639-1": "2.1.15",
+    "iso-639-1": "3.1.0",
+    "node-graceful-shutdown": "1.1.5",
     "lodash": "4.17.21",
-    "pino": "8.11.0",
-    "pino-pretty": "10.0.0",
-    "prom-client": "14.2.0",
-    "tsx": "3.12.6",
-    "zod": "3.21.4"
+    "pino": "8.18.0",
+    "pino-pretty": "10.3.1",
+    "tsx": "4.7.0",
+    "znv": "0.4.0",
+    "zod": "3.22.4"
   },
   "devDependencies": {
     "@types/debug": "4.1.7",
     "@types/ioredis": "4.28.10",
     "@types/lodash": "4.14.194",
-    "@types/node": "18.15.11",
-    "@typescript-eslint/eslint-plugin": "5.58.0",
-    "@typescript-eslint/parser": "5.58.0",
-    "eslint": "8.38.0",
+    "@types/node": "20.11.16",
+    "@typescript-eslint/eslint-plugin": "6.20.0",
+    "@typescript-eslint/parser": "6.20.0",
+    "eslint": "8.56.0",
     "eslint-config-airbnb-base": "15.0.0",
-    "eslint-config-prettier": "8.8.0",
-    "eslint-import-resolver-typescript": "3.5.5",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-prettier": "4.2.1",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-import-resolver-typescript": "3.6.1",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-prettier": "5.1.3",
+    "eslint-plugin-unicorn": "50.0.1",
     "husky": "8.0.3",
-    "lint-staged": "13.2.1",
-    "prettier": "2.8.7",
-    "prettier-plugin-organize-imports": "3.2.2",
-    "prisma": "4.12.0",
+    "lint-staged": "15.2.1",
+    "prettier": "3.2.4",
+    "prettier-plugin-organize-imports": "3.2.4",
+    "prisma": "5.9.1",
     "rimraf": "5.0.0",
-    "tsc-watch": "6.0.0",
-    "typescript": "5.0.4"
+    "tsc-watch": "6.0.4",
+    "typescript": "5.3.3"
   },
   "engines": {
     "node": ">=18.0.0",
