--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
     "typescript.tsdk": "node_modules/typescript/lib",
     "eslint.codeActionsOnSave.mode": "problems",
     "[typescript]": {
-      "editor.defaultFormatter": "rvest.vs-code-prettier-eslint"
+      "editor.defaultFormatter": "dbaeumer.vscode-eslint"
     },
     "editor.formatOnSave": true,
     "editor.codeActionsOnSave": {
